# icicle

./: CMakeLists.txt  README.md  why_it_doesn't_work.txt
include/icicle/: camera.hpp  context.hpp  renderable.hpp  renderer.hpp
include/icicle/detail/: glsl_program.hpp  shader.hpp
include/stak/: camera.hpp  context.hpp  renderable.hpp  renderer.hpp  stak.hpp
include/stak/detail/: glsl_program.hpp  shader.hpp
source/: camera.cpp  context.cpp  renderable.cpp  renderer.cpp
source/detail/: glsl_program.cpp
